Changed various styling issues to improve readability, fixed some conventions.

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -29,7 +29,7 @@
   flex-basis: auto; 
   flex:none;
   width: 260px;
-  height:60px;
+  height:57px;
   overflow: hidden;
 
   text-align: center;
