--- a/src/app/input-panel/input-panel.component.css
+++ b/src/app/input-panel/input-panel.component.css
@@ -1,136 +1,150 @@
 h1 {
-    text-align: center; 
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-align: center; 
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 p { 
-    font-size: 0.6em;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-    color:grey; 
-    
+  font-size: 0.6em;
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+  color:grey; 
+  
 }
 
 
 
 .slidecontainer {
-    
-    width: 100% ;
-    
-    margin: 0 auto;
-    display: grid;
-    grid-template-columns: 3fr 1fr;
-    grid-gap: 2px;
+  
+  width: 100% ;
+  
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  grid-gap: 2px;
 }
 
 .sliderTitle{
+float: left;
+text-align: left;
+
+font-family: Arial, Helvetica, sans-serif;
+font-size: 0.8rem;
+margin-top:12px;
+margin-bottom:2px;
+}
+.sliderTitle2{
   float: left;
   text-align: left;
-
+  
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 0.65rem;
-  margin-top:12px;
-}
+  font-size: 0.8rem;
+  margin-top:6px;
+  margin-bottom:2px;
+  }
+  
+
+
 .inputSlider{
-  float:left;
-  overflow:hidden;
-  margin:0; 
-  padding:0;
+float:left;
+overflow:hidden;
+margin:0; 
+padding:0;
 }
 .sliderValue{
-  margin-top:7px;
-  float:right; 
-  font-size:0.6em; 
-  font-family:Arial, Helvetica, sans-serif;
-  color:darkgray; 
+margin-top:7px;
+float:right; 
+font-size:0.64em; 
+font-family:Arial, Helvetica, sans-serif;
+color:rgb(53, 53, 53); 
 }
+
 .labels_under{
-  position: relative;
-  display:inline;
-  margin-bottom:0px;
-  margin-top:-20px;
-  font-size:0.6rem;
-  color:black;
+position: relative;
+display:inline;
+margin-bottom:0px;
+margin-top:-20px;
+font-size:0.5rem;
+color:black;
 
-  pointer-events: none;
+pointer-events: none;
 }
+
 .sliderInfo{
-  font-size:0.55em;
-  font-family:Arial, Helvetica, sans-serif;
-  /* color:rgb(72, 72, 72); */
-  color:darkgray; 
+font-size:0.65em;
+font-family:Arial, Helvetica, sans-serif;
+/* color:rgb(72, 72, 72); */
+color:black; 
 
 
 }
-
 
 .stocks{
-  margin-left:5px;
+  font-size:0.65rem;
+  margin-left:0px;
   float:left;
 }
 .bonds{
+  font-size:0.65rem;
   float:right;
-  margin-right: 5px;
+  margin-right: 0px;
 }
-
 .buttonContainer{
-  text-align: center;
-  margin-top: 20px;
+text-align: center;
+margin-top: 20px;
 }
 
 #runButton {
-  background-color:black; /* Green */
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  border-radius: 5px;
+background-color:black; /* Green */
+border: none;
+color: white;
+padding: 15px 32px;
+text-align: center;
+text-decoration: none;
+display: inline-block;
+font-size: 16px;
+border-radius: 5px;
 }
 
 .slider {
-    display: block; 
-    margin:0;
-    -webkit-appearance: none;
-    width: 100%;
-    height: 25px;
-    background: #d3d3d3;
-    outline: none;
-    opacity: 0.7;
-    -webkit-transition: .2s;
-    transition: opacity .2s;
-  }
-  
-  .slider:hover {
-    opacity: 1;
-  }
-  
-  .slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 25px;
-    height: 25px;
-    background: black;
-    cursor: pointer;
-    
-  }
-
-#allocationSlider::-webkit-slider-thumb{
-  box-shadow: -1000px 0 0 1000px grey;
+  display: block; 
+  margin:0;
+  -webkit-appearance: none;
+  width: 100%;
+  height: 25px;
+  background: #d3d3d3;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
 }
-  
-  
-.slider::-moz-range-thumb {
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
   width: 25px;
   height: 25px;
   background: black;
   cursor: pointer;
+  
+}
+
+#allocationSlider::-webkit-slider-thumb{
+box-shadow: -1000px 0 0 1000px grey;
+}
+
+
+.slider::-moz-range-thumb {
+width: 25px;
+height: 25px;
+background: black;
+cursor: pointer;
 }
 
 .slider:::-ms-fill-lower{
-  background:red;
+background:red;
 }
 
-  
